# CmakeOpenglProject

./: CMakeLists.txt  README.md  build.ps1
include/GLFW/: glfw3.h
resources/shaders/: basic.glsl
src/: buffer.h  radha.cpp  shader.cpp  shader.h  texture.cpp  texture.h
